--- a/plugin.xml
+++ b/plugin.xml
@@ -37,22 +37,21 @@
 				</service>
 			</config-file>
 		
-			<source-file src="SyncService.java" target-dir="src/at/kju/datacollector" />
-			<source-file src="Constants.java" target-dir="src/at/kju/datacollector" />
-			<source-file src="DCSync.java" target-dir="src/at/kju/datacollector" />
-			<source-file src="authenticator/AuthenticationService.java" target-dir="src/at/kju/datacollector/autenticator" />
-			<source-file src="authenticator/Authenticator.java" target-dir="src/at/kju/datacollector/autenticator" />
-			<source-file src="authenticator/JsonHelper.java" target-dir="src/at/kju/datacollector/autenticator" />
-			<source-file src="client/DCDocument.java" target-dir="src/at/kju/datacollector/client" />
-			<source-file src="client/MultipartUtility.java" target-dir="src/at/kju/datacollector/client" />
-			<source-file src="client/NetworkUtilities.java" target-dir="src/at/kju/datacollector/client" />
-			<source-file src="client/SyncSettings.java" target-dir="src/at/kju/datacollector/client" />
-			<source-file src="storage/DCContentProvider.java" target-dir="src/at/kju/datacollector/storage" />
-			<source-file src="storage/DCDataHelper.java" target-dir="src/at/kju/datacollector/storage" />
-			<source-file src="storage/DCRepository.java" target-dir="src/at/kju/datacollector/storage" />
-			<source-file src="storage/LocalStorageSyncManager.java" target-dir="src/at/kju/datacollector/storage" />
-			<source-file src="syncadapter/SyncAdapter.java" target-dir="src/at/kju/datacollector/syncadapter" />
-			<source-file src="syncadapter/SyncService.java" target-dir="src/at/kju/datacollector/syncadapter" />
+			<source-file src="src/android/Constants.java" target-dir="src/at/kju/datacollector" />
+			<source-file src="src/android/DCSync.java" target-dir="src/at/kju/datacollector" />
+			<source-file src="src/android/authenticator/AuthenticationService.java" target-dir="src/at/kju/datacollector/autenticator" />
+			<source-file src="src/android/authenticator/Authenticator.java" target-dir="src/at/kju/datacollector/autenticator" />
+			<source-file src="src/android/authenticator/JsonHelper.java" target-dir="src/at/kju/datacollector/autenticator" />
+			<source-file src="src/android/client/DCDocument.java" target-dir="src/at/kju/datacollector/client" />
+			<source-file src="src/android/client/MultipartUtility.java" target-dir="src/at/kju/datacollector/client" />
+			<source-file src="src/android/client/NetworkUtilities.java" target-dir="src/at/kju/datacollector/client" />
+			<source-file src="src/android/client/SyncSettings.java" target-dir="src/at/kju/datacollector/client" />
+			<source-file src="src/android/storage/DCContentProvider.java" target-dir="src/at/kju/datacollector/storage" />
+			<source-file src="src/android/storage/DCDataHelper.java" target-dir="src/at/kju/datacollector/storage" />
+			<source-file src="src/android/storage/DCRepository.java" target-dir="src/at/kju/datacollector/storage" />
+			<source-file src="src/android/storage/LocalStorageSyncManager.java" target-dir="src/at/kju/datacollector/storage" />
+			<source-file src="src/android/syncadapter/SyncAdapter.java" target-dir="src/at/kju/datacollector/syncadapter" />
+			<source-file src="src/android/syncadapter/SyncService.java" target-dir="src/at/kju/datacollector/syncadapter" />
 			<!--<resource-file src="FooPluginStrings.xml" target="res/values/FooPluginStrings.xml" />-->
         </platform>
     </plugin>
