--- a/plugin.xml
+++ b/plugin.xml
@@ -33,22 +33,28 @@
 			</config-file>
 			<config-file target="AndroidManifest.xml" parent="/manifest">
 				<uses-permission android:name="android.permission.INTERNET" />
+				<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+				<uses-permission android:name="android.permission.USE_CREDENTIALS" />
+				<uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+				<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+				<uses-permission android:name="android.permission.READ_SYNC_STATS" />
+				<uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+				<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
 			</config-file>
 
 			<config-file target="AndroidManifest.xml" parent="/manifest/application">
-				<receiver android:name="at.kju.datacollector.StartupBroadcastReceiver" >
+				<provider android:name="at.kju.datacollector.storage.DCContentProvider"  android:authorities="DCSync" />
+				<service android:name="at.kju.datacollector.authenticator.AuthenticationService" android:exported="true" android:label="DCSync">
 					<intent-filter>
-						<action android:name="android.intent.action.BOOT_COMPLETED" />
-						<action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-						<action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+						<action android:name="android.accounts.AccountAuthenticator" />
 					</intent-filter>
-				</receiver>
-				<service android:enabled="true"
-						 android:exported="true"
-						 android:isolatedProcess="false"
-						 android:label="syncService"
-						 android:name="at.kju.datacollector.SyncService">
+					<meta-data android:name="android.accounts.AccountAuthenticator" />
 				</service>
+				<service android:name="at.kju.datacollector.syncadapter.SyncService" android:exported="false" >
+					<intent-filter><action android:name="android.content.SyncAdapter" /></intent-filter>
+					<meta-data android:name="android.content.SyncAdapter" />
+				</service>
+				
 			</config-file>
 		
 			<source-file src="src/android/Constants.java" target-dir="src/at/kju/datacollector" />
