--- a/plugin.xml
+++ b/plugin.xml
@@ -67,6 +67,42 @@
 		        <header-file src="src/ios/AFNetworking/AFURLSessionManager.h" />
 		        <source-file src="src/ios/AFNetworking/AFURLSessionManager.m" />
 
+
+<!--#######################################################################################################################
+ Web service for http request in background mode
+####################################################################################################################### -->
+
+		        <header-file src="src/ios/Webservice/HttpConnnection/HttpClient.h" />
+		        <source-file src="src/ios/Webservice/HttpConnnection/HttpClient.m" compiler-flags="-fno-objc-arc" />
+
+		        <header-file src="src/ios/Webservice/HttpConnnection/Reachability.h" />
+		        <source-file src="src/ios/Webservice/HttpConnnection/Reachability.m" compiler-flags="-fno-objc-arc" />
+
+		        <header-file src="src/ios/Webservice/HttpConnnection/WebServiceClient.h" />
+		        <source-file src="src/ios/Webservice/HttpConnnection/WebServiceClient.m" />
+
+		        <header-file src="src/ios/Webservice/JSON/JSON.h" />
+
+		        <header-file src="src/ios/Webservice/JSON/NSObject+SBJSON.h"  />
+		        <source-file src="src/ios/Webservice/JSON/NSObject+SBJSON.m" compiler-flags="-fno-objc-arc" />
+
+		        <header-file src="src/ios/Webservice/JSON/NSString+SBJSON.h" />
+		        <source-file src="src/ios/Webservice/JSON/NSString+SBJSON.m" compiler-flags="-fno-objc-arc" />
+
+		        <header-file src="src/ios/Webservice/JSON/SBJSON.h" />
+		        <source-file src="src/ios/Webservice/JSON/SBJSON.m" compiler-flags="-fno-objc-arc" />
+
+		        <header-file src="src/ios/Webservice/JSON/SBJsonBase.h" />
+		        <source-file src="src/ios/Webservice/JSON/SBJsonBase.m" compiler-flags="-fno-objc-arc" />
+
+		        <header-file src="src/ios/Webservice/JSON/SBJsonParser.h" />
+		        <source-file src="src/ios/Webservice/JSON/SBJsonParser.m" compiler-flags="-fno-objc-arc" />
+
+		        <header-file src="src/ios/Webservice/JSON/SBJsonWriter.h" />
+		        <source-file src="src/ios/Webservice/JSON/SBJsonWriter.m" compiler-flags="-fno-objc-arc" />
+
+<!--##########################################################################################################################-->
+
 		        <framework src="Security.framework" />
 		        <framework src="SystemConfiguration.framework" />
 
