--- a/plugin.xml
+++ b/plugin.xml
@@ -81,7 +81,7 @@
 			</config-file>
 
 			<config-file target="res/values/strings.xml" parent="/*">
-				<string name="aam_account_type">at.kju.datacollector</string>
+				<string name="aam_account_type">at.kju.saloncarcollector</string>
 			</config-file> 
 			
 			<config-file target="AndroidManifest.xml" parent="/manifest/application">
