--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
     <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" 
-       id="cordova-plugin-dcsync" version="0.3.8">
+       id="cordova-plugin-dcsync" version="0.3.9">
         <name>DCSync</name>
         <description>Cordova Datacollector Sync Plugin</description>
         <license>Apache 2.0</license>
@@ -86,18 +86,19 @@
 			
 			<config-file target="AndroidManifest.xml" parent="/manifest/application">
 			
-				<provider android:name="at.kju.datacollector.storage.DCContentProvider"  android:authorities="at.kju.datacollector" android:exported="true"/>
-				<service android:name="at.kju.datacollector.authenticator.AuthenticationService" android:exported="true">
+				<provider android:authorities="at.kju.saloncarcollector" android:exported="true" android:name="at.kju.datacollector.storage.DCContentProvider" />
+				<service android:exported="true" android:name="at.kju.datacollector.authenticator.AuthenticationService">
 					<intent-filter>
 						<action android:name="android.accounts.AccountAuthenticator" />
 					</intent-filter>
-					<meta-data android:name="android.accounts.AccountAuthenticator" android:resource="@xml/authenticator"/>
+					<meta-data android:name="android.accounts.AccountAuthenticator" android:resource="@xml/authenticator" />
 				</service>
-				<service android:name="at.kju.datacollector.syncadapter.SyncService" android:exported="false" >
-					<intent-filter><action android:name="android.content.SyncAdapter" /></intent-filter>
+				<service android:exported="false" android:name="at.kju.datacollector.syncadapter.SyncService">
+					<intent-filter>
+						<action android:name="android.content.SyncAdapter" />
+					</intent-filter>
 					<meta-data android:name="android.content.SyncAdapter" android:resource="@xml/syncadapter" />
 				</service>
-				
 			</config-file>
 		
 			<resource-file src="res/xml/authenticator.xml" target="res/xml/authenticator.xml" />
